add get all users get all services